--- a/index.html
+++ b/index.html
@@ -1,193 +1,114 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hercules Gym</title>
+    <title>Vigyan Bharti-A Step towards Explorarion</title>
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/style.css">
-<style>
-    /* CSS reset */
-    body {
-        font-family: 'Baloo Bhai 2', cursive;
-        color: white;
-        margin: 0px;
-        padding: 0px;
-        background: url('img/risen-wang-20jX9b35r_M-unsplash\ \(1\).jpg');
-
-        /* Full height */
-        height: 100%;
-
-        /* Center and scale the image nicely */
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-
-    .left {
-        display: inline-block;
-        /* border: 2px solid red; */
-        position: absolute;
-        left: 20px;
-        top: 20px;
-
-
-    }
-
-    .left img {
-        width: 102px;
-        filter: invert(48%);
-    }
-
-    .right {
-        position: absolute;
-        right: 34px;
-        top: 20px;
-        display: inline-block;
-        /* border: 2px solid yellow; */
-
-    }
-
-    .mid {
-        /* border: 2px solid green; */
-        display: block;
-        width: 36%;
-        margin: 14px auto;
-
-
-    }
-
-    .navbar {
-        display: inline-block;
-    }
-
-    .navbar li {
-        display: inline-block;
-        font-size: 14px;
-    }
-
-    .navbar li a {
-        color: white;
-        text-decoration: none;
-        padding: 34px 23px;
-    }
-
-    .navbar li a:hover,
-    .navbar li a.active {
-        text-decoration: underline;
-        color: grey;
-    }
-
-    .btn {
-        font-family: 'Baloo Bhai 2', cursive;
-        margin: 0px 9px;
-        background-color: black;
-        color: blanchedalmond;
-        padding: 4px 14px;
-        border: 2px solid grey;
-        border-radius: 10px;
-        font-size: 14px;
-        cursor: pointer;
-    }
-
-    .btn:hover {
-        background-color: rgb(31, 30, 30);
-    }
-
-    .container {
-        /* border: 2px solid white; */
-        margin: 40px px;
-        padding: 47px;
-        width: 28%;
-        border-radius: 28px;
-    }
-    }
-
-    .form-group input {
-        -webkit-writing-mode: horizontal-tb !important;
-        text-rendering: auto;
-        color: -internal-light-dark(black, white);
-        letter-spacing: normal;
-        word-spacing: normal;
-        text-transform: none;
-        text-indent: 0px;
-        text-shadow: none;
-        display: inline-block;
-        text-align: start;
-        appearance: textfield;
-        background-color: -internal-light-dark(rgb(255, 255, 255), rgb(59, 59, 59));
-        -webkit-rtl-ordering: logical;
-        cursor: text;
-        margin: 0em;
-        font: 400 13.3333px Arial;
-        padding: 1px 2px;
-        border-width: 2px;
-        border-style: inset;
-        border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-        border-image: initial;
-    }
-    }
-
-    .container h1 {
-        text-align: center;
-        color: black;
-    }
-
-    .container button {
-        display: block;
-        width: 74%;
-        margin: 20px auto;
-    }
-</style>
 
 <body>
-    <header class="header">
-        <!-- left box for logo -->
-        <div class="left">
-            <img src="img/0fd78833-1bbd-4abd-9954-2f4fda17038b_200x200.png" alt="">
-            <div></div>
+    <nav class="navbar background h-nav">
+        <ul class="nav-list v-class">
+            <div class="logo"><img src="img/logo.png" alt="logo"></div>
+            <li><a href="Home">Home</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="services">Services</a></li>
+            <li><a href="contact">Contact us</a></li>
+        </ul>
+        <div class="rightnav v-class">
+            <input type="text" name="Search" id="Search">
+            <button class="btn btn-sm">Search</button>
+        </div>
+        <div class="burger">
+            <div class="line"></div>
+            <hr>
+            <div class="line"></div>
+            <hr>
+            <div class="line"></div>
+        </div>
+
+    </nav>
+    <section class="background firstsection">
+        <div class="box-main">
+            <div class="first-half">
+
+                <p style="text-align: left;" class="text-big">The future of eductaion is here</p>
+                <p style="text-align: left;" class="text-small">In iur country we will try to gave our initiation in
+                    making of our country
+                    eductaion policy innovative and great again</p>
+                <div class="button">
+
+                    <button style="margin: 10px;" class="btn">Follow for more</button>
+                    <button style="margin: 10px;" class="btn">Explore</button>
+                </div>
+            </div>
+            <div class="second-half">
+                <img src="../img/logo.jpg" alt="arduino image">
+            </div>
 
         </div>
-        <div class="mid">
-            <ul class="navbar">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Fitness calculator</a></li>
-                <li><a href="#">Contact us</a></li>
-            </ul>
-
+    </section>
+    <hr>
+    <section class="section">
+        <div class="paras">
+        <p class="sectiontag text-big">The end of your search is here</p>
+        <p class="sectionsubtag text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae adipisci autem
+            iure, quibusdam voluptates possimus aliquam pariatur ipsam! Exercitationem iusto ab voluptatum praesentium
+            sit, eveniet nobis beatae suscipit amet ea officiis iure, aperiam pariatur odit earum sed saepe veniam
+            blanditiis quis, possimus inventore.</p>
         </div>
-        <div class="right">
-            <button class="btn">Contact Us</button>
-            <button class="btn">Email us</button>
+            <div class="thumbnail">
+                <img src="../img/hole.jpg" alt="Space image" class="imgfluid">
+            </div>
+    </section>
+    <hr>
+    <section class="section left">
+        <div class="paras">
+        <p class="sectiontag text-big">The end of your search is here</p>
+        <p class="sectionsubtag text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae adipisci autem
+            iure, quibusdam voluptates possimus aliquam pariatur ipsam! Exercitationem iusto ab voluptatum praesentium
+            sit, eveniet nobis beatae suscipit amet ea officiis iure, aperiam pariatur odit earum sed saepe veniam
+            blanditiis quis, possimus inventore.</p>
         </div>
-    </header>
-    <div class="container">
-        <h1 style="color:slategray;">Join the best Gym near BBD</h1>
-        <form action="noaction.php">
-            <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Name">
+            <div class="thumbnail">
+                <img src="../img/ref.jpg" alt="Space image" class="imgfluid">
             </div>
-            <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Age">
+    </section>
+    </section>
+    <hr>
+    <section class="section">
+        <div class="paras">
+        <p class="sectiontag text-big">The end of your search is here</p>
+        <p class="sectionsubtag text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae adipisci autem
+            iure, quibusdam voluptates possimus aliquam pariatur ipsam! Exercitationem iusto ab voluptatum praesentium
+            sit, eveniet nobis beatae suscipit amet ea officiis iure, aperiam pariatur odit earum sed saepe veniam
+            blanditiis quis, possimus inventore.</p>
+        </div>
+            <div class="thumbnail">
+                <img src="../img/asteroid.jpg" alt="Space image" class="imgfluid">
             </div>
-            <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Gender">
-            </div>
-            <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Locality">
-            </div>
-            <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Email Id">
-            </div>
-            <div class="form-group">
-                <input type="text" name="" placeholder="Enter your Phone Number">
-            </div>
+    </section>
+    <hr>
+    <section class="contact">
+        <h2 class="text-center">Contact Us</h2>
+        <div class="form">
+            <input class="form-input" type="text" name="name" id="name" placeholder="Enter your name">
+            <input class="form-input" type="text" name="Phone" id="Phone" placeholder="Enter your Phone Number">
+            <input class="form-input" type="email" name="email" id="email" placeholder="Enter your Email">
+             <textarea class="textarea" name="text" id="text" cols="30" rows="10"placeholder="Elaborate your concern"></textarea>
             <button class="btn">Submit</button>
-        </form>
-    </div>
+        </div>
+    </section>
+    <footer class="background">
+        <p class="text-footer">
+            Copyright &copy; 2025 |- All rights reserved
+        </p>
+    </footer>
+
+    <script src="js/resp.js"></script>
 </body>
 
 </html>
